[gd_scene load_steps=2 format=2]

[ext_resource path="res://CenterShip.gd" type="Script" id=1]

[node name="CenterShip" type="Area2D"]
position = Vector2( 540, 1400 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, -76, 48, -32, 32, 64, -32, 64, -44, -32 )

[node name="Polygon2DShip" type="Polygon2D" parent="."]
position = Vector2( 0, -24 )
z_index = 1
color = Color( 0.243137, 0.196078, 0.392157, 1 )
polygon = PoolVector2Array( 0, -52.0001, 20, -40.0001, 48, -8.00012, 32, 87.9999, 0, 99.9999, -32, 87.9999, -44, -8.00012, -20, -40.0001 )

[node name="Polygon2DShadow" type="Polygon2D" parent="Polygon2DShip"]
color = Color( 0.207843, 0.164706, 0.333333, 1 )
polygon = PoolVector2Array( 0, -52, 16, -36, 36, -8, 24, 82, 0, 100, 32, 88, 48, -8, 20, -40 )

[node name="Polygon2DWindow1" type="Polygon2D" parent="Polygon2DShip"]
position = Vector2( 0, 25 )
color = Color( 0.00392157, 0.533333, 0.647059, 1 )
polygon = PoolVector2Array( 0, -71, 6, -67, 0, -53, -6, -67 )

[node name="Polygon2DWindow2" type="Polygon2D" parent="Polygon2DShip"]
color = Color( 0.00392157, 0.533333, 0.647059, 1 )
polygon = PoolVector2Array( 10, -40, 18, -34, 4, -28 )

[node name="Polygon2DWindow3" type="Polygon2D" parent="Polygon2DShip"]
color = Color( 0.00392157, 0.533333, 0.647059, 1 )
polygon = PoolVector2Array( -10, -40, -18, -34, -4, -28 )

[node name="Polygon2DBooster1" type="Polygon2D" parent="."]
position = Vector2( -20, 52 )
z_index = -1
color = Color( 0.00392157, 0.796078, 0.811765, 1 )
polygon = PoolVector2Array( -4, 12, 4, 60, 12, 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Polygon2DBooster2" type="Polygon2D" parent="."]
position = Vector2( 12, 52 )
z_index = -1
color = Color( 0.00392157, 0.796078, 0.811765, 1 )
polygon = PoolVector2Array( -4, 12, 4, 60, 12, 12 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="area_entered" from="." to="." method="_on_CenterShip_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_CenterShip_body_entered"]
